# SquarespaceProductManager

./: .gitignore  INSTALL.md  README.md  Squarespacemanager.py  example.config.ini  pyproject.toml  requirements.txt
squarespace_manager/: cli.py  config.py  driver.py  model.py  page.py  selectors.py  utils.py  workflows.py
